# rust_batch_search

./: Cargo.toml  README.md
src/: lib.rs
