[package]
name = "rust_batch_search"
version = "0.1.0"
authors = ["Simon Auch <auchsimon@googlemail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies.rand_pcg]
version = "*"
[dev-dependencies.rand_core]
version = "*"
[dev-dependencies.criterion]
version = "*"
